Remove deprecated methods from IO files